added qwen and grok

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ ANTHROPIC_API_KEY=your-anthropic-api-key-here
 
 # Google API Key (optional)
 GOOGLE_API_KEY=your-google-api-key-here
+
+
+GROKAI_API_LE
